Java 17: Manifest Add-Opens